# HWHW

./: .clang-format  .gitignore  README.md
0_SqEq/: CMakeLists.txt  Doxyfile.txt  README.md  SqEq.c  SqEq.cc  SqEq.h  SqEqConfig.h.in  SqEqConfig.hh.in  main.c  main.cc  tests.cc
0_SqEq/docs/: CMakeLists.txt  Doxyfile.in
0_SqEq/include/: SqEq.hh
0_SqEq/lib/: CMakeLists.txt  SqEq.cc  SqEqConfig.cmake
0_SqEq/lib/SqEq/: CMakeLists.txt
0_SqEq/tools/: CMakeLists.txt
0_SqEq/tools/SqEqSolver/: CMakeLists.txt  main.cc  tests.cc
1_TxtSort/: CMakeLists.txt  README.md  main.cc
1_TxtSort/CharBuf/: CharBuf.cc  CharBuf.hh
1_TxtSort/Docs/: CMakeLists.txt
1_TxtSort/FileSys/: CMakeLists.txt  filesys.cc  filesys.hh
1_TxtSort/Qsort/: CMakeLists.txt  tqsort.cc
1_TxtSort/TSL/: CMakeLists.txt  tsl.cc  tsl.hh
1_TxtSort/TSL/CharBuf/: CMakeLists.txt  CharBuf.cc  CharBuf.hh
1_TxtSort/Trace/: CMakeLists.txt  trace.cc  trace.hh
1_TxtSort/cmake/: warns.cmake
1_TxtSort/docs/: CMakeLists.txt  Doxyfile.in
1_TxtSort/examples/: hello.txt  onegin.txt
1_TxtSort/include/Qsort/: tqsort.hh
1_TxtSort/lib/: CMakeLists.txt
1_TxtSort/lib/FileSys/: CMakeLists.txt
1_TxtSort/lib/Qsort/: CMakeLists.txt  tqsort.cc
1_TxtSort/tools/: CMakeLists.txt
1_TxtSort/tools/onegin/: CMakeLists.txt  main.cc
1_TxtSort/tsl/: CMakeLists.txt  tsl.cc  tsl.hh
2_Stack/: CMakeLists.txt  README.md  main.cc
2_Stack/Stack/: CMakeLists.txt  stack.cc  stack.hh
2_Stack/include/: stack.hh
2_Stack/lib/: CMakeLists.txt  STKConfig.cmake  stack.cc
2_Stack/tools/: CMakeLists.txt
2_Stack/tools/testtool/: CMakeLists.txt  main.cc
3_ASMR/: CMakeLists.txt
3_ASMR/include/asm/: asm.hh
3_ASMR/include/tokenizer/: tokenizer.hh
3_ASMR/lib/: CMakeLists.txt
3_ASMR/lib/asm/: CMakeLists.txt
3_ASMR/lib/tokenizer/: CMakeLists.txt
3_ASMR/tools/: CMakeLists.txt
3_ASMR/tools/assembler/: CMakeLists.txt  assembler.cc  assembler.hh  main.cc
3_ASMR/tools/disassembler/: CMakeLists.txt  main.cc
3_ASMR/tools/processor/: CMakeLists.txt  main.cc
CMake/: comp_flags.cmake
Libs/TLL/include/: trace.hh
Libs/TSL/: CMakeLists.txt  tsl.cc  tsl.hh
Libs/TSL/CharBuf/: CBConfig.cmake  CMakeLists.txt  CharBuf.cc  CharBuf.hh
Libs/TSL/docs/: CMakeLists.txt
Libs/Trace/docs/: CMakeLists.txt
Libs/Trace/lib/: CMakeLists.txt  TLLConfig.cmake  trace.cc
cmake/: build_doc.cmake  clang_format.cmake
libs/TLL/: CMakeLists.txt
libs/TLL/lib/: CMakeLists.txt
libs/TSL/: CMakeLists.txt  TSLConfig.cmake
libs/TSL/CharBuf/: CMakeLists.txt
libs/TSL/lib/: CMakeLists.txt
libs/TSL/lib/CharBuf/: CMakeLists.txt  CharBuf.cc
libs/TSL/lib/FileSys/: CMakeLists.txt
libs/TSL/lib/TSL/: CMakeLists.txt  tsl.cc
